debezium/dbz#1498 simplify the range for the journal entry request
Signed-off-by: martin <martin.sillence@jhc.co.uk>