@@ -23,8 +23,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import com.ibm.as400.access.AS400;
 
@@ -42,14 +40,16 @@ class ReceiverPaginationTest {
     AS400 as400;
 
     DetailedJournalReceiver dr3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"),
-            new Date(3), JournalStatus.Attached, Optional.of(1)), BigInteger.valueOf(9), BigInteger.valueOf(17),
+            new Date(3), JournalStatus.Attached, Optional.of(1)),
+            BigInteger.valueOf(21), BigInteger.valueOf(32),
             Optional.empty(), 1, 1);
     DetailedJournalReceiver dr2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"),
-            new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3),
-            BigInteger.valueOf(8),
+            new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)),
+            BigInteger.valueOf(11), BigInteger.valueOf(20),
             Optional.of(dr3.info().receiver()), 1, 1);
     DetailedJournalReceiver dr1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"),
-            new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.ONE, BigInteger.TWO,
+            new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)),
+            BigInteger.ONE, BigInteger.valueOf(10),
             Optional.of(dr2.info().receiver()), 1, 1);
 
     @BeforeEach
@@ -57,25 +57,7 @@ class ReceiverPaginationTest {
     }
 
     @Test
-    void findRangeWithinCurrentPosistion() throws Exception {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-
-        final List<DetailedJournalReceiver> list = Arrays.asList(dr1);
-
-        when(journalInfoRetrieval.getReceivers(any(), any())).thenReturn(list);
-
-        when(journalInfoRetrieval.getDelayedDetailedJournalReceiver(any(), any())).thenReturn(Optional.of(dr1));
-
-        final JournalProcessedPosition startPosition = new JournalProcessedPosition(BigInteger.ONE,
-                new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> result = jreceivers.findRange(as400, startPosition);
-        final PositionRange rangeAnswer = new PositionRange(false, startPosition,
-                new JournalPosition(dr1.end(), dr1.info().receiver()));
-        assertEquals(rangeAnswer, result.get());
-    }
-
-    @Test
-    void findRangeInList() throws Exception {
+    void findToEndOfFirstEntry() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
 
         final List<DetailedJournalReceiver> list = Arrays.asList(dr1, dr2);
@@ -88,255 +70,86 @@ class ReceiverPaginationTest {
                 new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
         final Optional<PositionRange> result = jreceivers.findRange(as400, startPosition);
         final PositionRange rangeAnswer = new PositionRange(false, startPosition,
-                new JournalPosition(dr2.end(), dr2.info().receiver()));
+                new JournalPosition(dr1.end(), dr1.info().receiver()));
         assertEquals(rangeAnswer, result.get());
     }
 
     @Test
-    void findRangeReFetchList() throws Exception {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 15, journalInfo);
+    void findSecondWhenFirstReceiverFinished() throws Exception {
+        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
 
-        final DetailedJournalReceiver detailedEnd = dr2;
-        final List<DetailedJournalReceiver> list = Arrays.asList(dr1, detailedEnd);
+        final List<DetailedJournalReceiver> list = Arrays.asList(dr1, dr2);
 
-        final DetailedJournalReceiver detailedEnd2 = dr3;
-        final List<DetailedJournalReceiver> list2 = Arrays.asList(dr1, dr2, detailedEnd2);
-        when(journalInfoRetrieval.getReceivers(any(), any())).thenReturn(list).thenReturn(list2);
-        when(journalInfoRetrieval.getDelayedDetailedJournalReceiver(any(), any())).thenReturn(Optional.of(detailedEnd)).thenReturn(Optional.of(detailedEnd2));
+        when(journalInfoRetrieval.getReceivers(any(), any())).thenReturn(list);
 
-        final JournalProcessedPosition startPosition = new JournalProcessedPosition(BigInteger.ONE,
+        when(journalInfoRetrieval.getDelayedDetailedJournalReceiver(any(), any())).thenReturn(Optional.of(dr2));
+
+        final JournalProcessedPosition startPosition = new JournalProcessedPosition(dr1.end(),
                 new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
         final Optional<PositionRange> result = jreceivers.findRange(as400, startPosition);
-        final PositionRange rangeAnswer = new PositionRange(false, startPosition,
-                new JournalPosition(BigInteger.valueOf(8), detailedEnd.info().receiver()));
-        assertEquals(rangeAnswer, result.get());
-
-        final JournalProcessedPosition startPosition2 = new JournalProcessedPosition(BigInteger.valueOf(2),
-                new JournalReceiver("j2", "jlib"), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> result2 = jreceivers.findRange(as400, startPosition2);
-        final PositionRange rangeAnswer2 = new PositionRange(false, startPosition2,
-                new JournalPosition(BigInteger.valueOf(17), detailedEnd2.info().receiver()));
-        assertEquals(rangeAnswer2, result2.get());
-
+        final JournalProcessedPosition startExpected = new JournalProcessedPosition(dr2.start(),
+                new JournalReceiver("j2", "jlib"), Instant.ofEpochSecond(0), false);
+        final PositionRange rangeExpected = new PositionRange(false, startExpected,
+                new JournalPosition(dr2.end(), dr2.info().receiver()));
+        assertEquals(rangeExpected, result.get());
     }
 
     @Test
-    void testFindRangeMidFirstEntry() {
+    void findFirstWhenFirstReceiverAtEndButNotProcessed() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(5), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(6), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(3), list, j3);
-        assertTrue(position.isPresent());
-        assertEquals("j1", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(4), position.get().end().getOffset());
+
+        final List<DetailedJournalReceiver> list = Arrays.asList(dr1, dr2);
+
+        when(journalInfoRetrieval.getReceivers(any(), any())).thenReturn(list);
+
+        when(journalInfoRetrieval.getDelayedDetailedJournalReceiver(any(), any())).thenReturn(Optional.of(dr2));
+
+        final JournalProcessedPosition startPosition = new JournalProcessedPosition(dr1.end(),
+                new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), false);
+        final Optional<PositionRange> result = jreceivers.findRange(as400, startPosition);
+
+        final PositionRange rangeExpected = new PositionRange(false, startPosition,
+                new JournalPosition(dr1.end(), dr1.info().receiver()));
+        assertEquals(rangeExpected, result.get());
     }
 
     @Test
-    void testFindRangeMidSecondEntryReset() {
+    void testFindRangeWhenAtEndOfList() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(30), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(15), list, j3);
+
+        final List<DetailedJournalReceiver> list = List.of(dr1, dr2);
+        JournalProcessedPosition start = new JournalProcessedPosition(dr2.end(), dr2.info().receiver(), Instant.ofEpochSecond(0), true);
+        final Optional<PositionRange> position = jreceivers.findPosition(start, BigInteger.valueOf(100), list);
+
         assertTrue(position.isPresent());
-        assertEquals("j2", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(16), position.get().end().getOffset());
+        assertEquals(dr2.info().receiver(), position.get().end().getReceiver());
+        assertEquals(dr2.end(), position.get().end().offset());
     }
 
     @Test
-    void testFindRangeMidSecondContiguous() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(10), list, j3);
-        assertTrue(position.isPresent());
-        assertEquals("j2", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(11), position.get().end().getOffset());
-    }
-
-    @Test
-    void testFindRangeMidEndEntry() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(30), list, j3);
-        assertTrue(position.isPresent());
-        assertEquals("j3", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(31), position.get().end().getOffset());
-    }
-
-    @Test
-    void testFindRangePastEnd() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2, j3);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(100), list, j3);
-        assertTrue(position.isPresent());
-        assertEquals("j3", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(35), position.get().end().getOffset());
-    }
-
-    @Test
-    void testFindRangeEqualsEnd() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 10, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1);
-        final Optional<PositionRange> position = jreceivers.findPosition(
-                new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true),
-                BigInteger.valueOf(100), list, j1);
-        assertTrue(position.isPresent());
-        assertEquals("j1", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(10), position.get().end().getOffset());
-    }
-
-    @Test
-    void testFindMidStartingMid() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(30), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1);
-        final DetailedJournalReceiver j4 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j4", "jlib"), new Date(4),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(41), BigInteger.valueOf(50), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2, j3, j4);
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(25),
-                j3.info().receiver(), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> position = jreceivers.findPosition(start, BigInteger.valueOf(10), list, j4);
-        assertTrue(position.isPresent());
-        assertEquals("j4", position.get().end().getReceiver().name());
-        assertEquals(BigInteger.valueOf(45), position.get().end().getOffset());
-
-    }
-
-    @Test
-    void testFindStartingPastEnd() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2);
-        final Optional<PositionRange> position = jreceivers
-                .findPosition(new JournalProcessedPosition(BigInteger.valueOf(30), new JournalReceiver("j3", "jlib"),
-                        Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j2);
-        assertTrue(position.isEmpty());
-    }
-
-    @Test
-    void testPaginateInSameReceiverEnd() throws Exception {
-        final int maxOffset = 1000;
-        final BigInteger maxServerSideEntriesBI = BigInteger.valueOf(maxOffset);
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, maxOffset, journalInfo);
-
-        final JournalProcessedPosition startPosition = new JournalProcessedPosition(BigInteger.ONE,
+    public void paginateInSameReceiverRestrict() throws Exception {
+        final BigInteger maxServerSideEntriesBI = BigInteger.valueOf(5);
+        final ReceiverPagination pagination = new ReceiverPagination(journalInfoRetrieval, maxServerSideEntriesBI.intValue(), journalInfo);
+        final JournalProcessedPosition startPosition = new JournalProcessedPosition(dr1.start().add(BigInteger.ONE),
                 new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
-        final DetailedJournalReceiver endJournalPosition = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
+        PositionRange range = pagination.paginateInSameReceiver(startPosition, dr1, maxServerSideEntriesBI);
 
-        final PositionRange range = jreceivers.paginateInSameReceiver(startPosition, endJournalPosition,
-                maxServerSideEntriesBI);
-        assertEquals(endJournalPosition.end(), range.end().getOffset());
+        final PositionRange rangeExpected = new PositionRange(false, startPosition,
+                new JournalPosition(startPosition.getOffset().add(maxServerSideEntriesBI), dr1.info().receiver()));
+        assertEquals(rangeExpected, range);
     }
 
     @Test
-    void testPaginateInSameReceiverLimited() throws Exception {
-        final int maxOffset = 10;
-        final BigInteger maxServerSideEntriesBI = BigInteger.valueOf(maxOffset);
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, maxOffset, journalInfo);
-
-        final JournalProcessedPosition startPosition = new JournalProcessedPosition(BigInteger.ONE,
+    public void paginateInSameReceiverToEnd() throws Exception {
+        final BigInteger maxServerSideEntriesBI = BigInteger.valueOf(100);
+        final ReceiverPagination pagination = new ReceiverPagination(journalInfoRetrieval, maxServerSideEntriesBI.intValue(), journalInfo);
+        final JournalProcessedPosition startPosition = new JournalProcessedPosition(dr1.start().add(BigInteger.ONE),
                 new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
-        final DetailedJournalReceiver endJournalPosition = new DetailedJournalReceiver(
-                new JournalReceiverInfo(startPosition.getReceiver(), new Date(1), JournalStatus.OnlineSavedDetached,
-                        Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
+        PositionRange range = pagination.paginateInSameReceiver(startPosition, dr1, maxServerSideEntriesBI);
 
-        final PositionRange range = jreceivers.paginateInSameReceiver(startPosition, endJournalPosition,
-                maxServerSideEntriesBI);
-        assertEquals(startPosition.getOffset().add(maxServerSideEntriesBI), range.end().getOffset());
+        final PositionRange rangeExpected = new PositionRange(false, startPosition,
+                new JournalPosition(dr1.end(), dr1.info().receiver()));
+        assertEquals(rangeExpected, range);
     }
 
     @Test
@@ -361,7 +174,7 @@ class ReceiverPaginationTest {
     }
 
     @Test
-    void testFindMissingCurrentReceiver() {
+    void testFindMissingCurrentReceiver() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
         final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
                 new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
@@ -377,29 +190,13 @@ class ReceiverPaginationTest {
                 BigInteger.valueOf(21), BigInteger.valueOf(31), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1);
         final List<DetailedJournalReceiver> list = List.of(j1, j2);
         final Optional<PositionRange> position = jreceivers
-                .findPosition(new JournalProcessedPosition(BigInteger.valueOf(30), j1.info().receiver(),
-                        Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j3);
+                .findPosition(new JournalProcessedPosition(j3.start(), j3.info().receiver(),
+                        Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list);
         assertTrue(position.isEmpty());
     }
 
     @Test
-    void testContainsEndPosition() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final List<DetailedJournalReceiver> list = List.of(dr2, dr3);
-        assertTrue(jreceivers.containsEndPosition(list, dr3), "last entry found");
-        assertTrue(jreceivers.containsEndPosition(list, dr2), "first entry found");
-    }
-
-    @Test
-    void testNotContainsEndPosition() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final List<DetailedJournalReceiver> list = List.of(dr2, dr3);
-        final boolean found = jreceivers.containsEndPosition(list, dr1);
-        assertFalse(found, "receiver does not exist in list");
-    }
-
-    @Test
-    void testStartEqualsEndNotProcessed() {
+    void testStartEqualsEndNotProcessed() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
         final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
                 new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
@@ -410,14 +207,14 @@ class ReceiverPaginationTest {
         final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(10),
                 j1.info().receiver(), Instant.ofEpochSecond(0), false);
 
-        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(15), list, j1);
+        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(15), list);
         assertEquals(start, found.get().start());
         assertEquals(start.asJournalPosition(), found.get().end());
         assertFalse(found.get().startEqualsEnd());
     }
 
     @Test
-    void testStartEqualsEndProcessed() {
+    void testStartEqualsEndProcessed() throws Exception {
         final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
         final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
                 new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
@@ -429,185 +226,9 @@ class ReceiverPaginationTest {
                 j1.info().receiver(), Instant.ofEpochSecond(0), true);
 
         final Optional<PositionRange> found = jreceivers
-                .findPosition(start, BigInteger.valueOf(15), list, j1);
+                .findPosition(start, BigInteger.valueOf(15), list);
         assertEquals(start, found.get().start());
         assertEquals(start.asJournalPosition(), found.get().end());
         assertTrue(found.get().startEqualsEnd());
     }
-
-    @Test
-    void testStartEqualsEndProcessedResetReceiver() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(1), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2);
-
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(10),
-                j1.info().receiver(), Instant.ofEpochSecond(10), true);
-
-        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(20), list, j2);
-        assertEquals(
-                new JournalProcessedPosition(JournalPosition.startPosition(j2), start.getTimeOfLastProcessed(), false),
-                found.get().start());
-        assertEquals(JournalPosition.endPosition(j2), found.get().end());
-        assertFalse(found.get().startEqualsEnd());
-    }
-
-    @Test
-    void testStartEqualsEndNotProcessedResetReceivers() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(1), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2);
-
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(10),
-                j1.info().receiver(), Instant.ofEpochSecond(10), false);
-
-        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(20), list, j2);
-        assertEquals(start, found.get().start());
-        assertEquals(JournalPosition.endPosition(j1), found.get().end());
-        assertFalse(found.get().startEqualsEnd());
-    }
-
-    @Test
-    void testStartEqualsEndProcessedResetReceiversPaginate() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 100, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2);
-
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(10),
-                j1.info().receiver(), Instant.ofEpochSecond(10), true);
-
-        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(5), list, j2);
-        assertEquals(
-                new JournalProcessedPosition(JournalPosition.startPosition(j2), start.getTimeOfLastProcessed(), false),
-                found.get().start());
-        assertEquals(new JournalPosition(BigInteger.valueOf(5l), j2.info().receiver()), found.get().end());
-        assertFalse(found.get().startEqualsEnd());
-    }
-
-    private static final Logger log = LoggerFactory.getLogger(ReceiverPaginationTest.class);
-
-    @Test
-    void testStopBeforeJournalResetsPaginateOver() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 20, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(4),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2, j3);
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(5),
-                j1.info().receiver(), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> position = jreceivers.findPosition(start, BigInteger.valueOf(16), list, j1);
-        assertTrue(position.isPresent());
-        assertEquals("j2", position.get().end().getReceiver().name());
-        assertEquals(j2.end(), position.get().end().getOffset());
-
-    }
-
-    @Test
-    void testStopBeforeJournalResetsPaginateExact() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 20, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(4),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2, j3);
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(5),
-                j1.info().receiver(), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> position = jreceivers.findPosition(start, BigInteger.valueOf(15), list, j1);
-        assertTrue(position.isPresent());
-        assertEquals("j2", position.get().end().getReceiver().name());
-        assertEquals(j2.end(), position.get().end().getOffset());
-
-    }
-
-    @Test
-    void testStopOneBeforeJournalResetsPaginate() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 20, journalInfo);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(4),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j1, j2, j3);
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(5),
-                j1.info().receiver(), Instant.ofEpochSecond(0), true);
-        final Optional<PositionRange> position = jreceivers.findPosition(start, BigInteger.valueOf(14), list, j1);
-        assertTrue(position.isPresent());
-        assertEquals("j2", position.get().end().getReceiver().name());
-        assertEquals(j2.end().subtract(BigInteger.ONE), position.get().end().getOffset());
-    }
-
-    @Test
-    void testSkippingOverEndOfFirst() {
-        final ReceiverPagination jreceivers = new ReceiverPagination(journalInfoRetrieval, 40, journalInfo);
-        final DetailedJournalReceiver j0 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j0", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(111111), Optional.of(new JournalReceiver("j1", "jlib")), 1, 1);
-        final DetailedJournalReceiver j1 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(1), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
-        final DetailedJournalReceiver j2 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(21), BigInteger.valueOf(30), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
-        final DetailedJournalReceiver j3 = new DetailedJournalReceiver(
-                new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3),
-                        JournalStatus.OnlineSavedDetached, Optional.of(1)),
-                BigInteger.valueOf(31), BigInteger.valueOf(40), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1);
-        final List<DetailedJournalReceiver> list = List.of(j0, j1, j2, j3);
-
-        final JournalProcessedPosition start = new JournalProcessedPosition(BigInteger.valueOf(111111),
-                j0.info().receiver(), Instant.ofEpochSecond(10), true);
-
-        final Optional<PositionRange> found = jreceivers.findPosition(start, BigInteger.valueOf(40), list, j1);
-        assertEquals(start, found.get().start());
-        assertEquals(new JournalPosition(BigInteger.valueOf(40), j3.info().receiver()), found.get().end());
-    }
-
 }
